[package]
edition = "2018"
name = "rusty-jenkins"
version = "0.1.0"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"

[[bin]]
name = "jobexecutor-server"
path = "src/jobexecutor/server.rs"

[[bin]]
name = "jobexecutor-client"
path = "src/jobexecutor/client.rs"

[dependencies]
anyhow = "1.0.42"
async-stream = "0.3"
env_logger = "0.9.0"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
log = "0.4.14"
# futures-core = "0.3"
# futures-util = "0.3"
prost = "0.8"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3.22"
sysinfo = "0.20.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
