[package]
edition = "2018"
name = "rusty-jenkins"
version = "0.1.0"

[[bin]]
name = "jobexecutor-server"
path = "src/jobexecutor/server.rs"

[[bin]]
name = "jobexecutor-client"
path = "src/jobexecutor/client.rs"

[[bin]]
name = "slow"
path = "src/slowprocess/slow.rs"

[dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
log = "0.4.14"
prost = "0.8"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3.22"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
