[package]
edition = "2018"
name = "jobexecutor-cli"
version = "0.1.0"

[[bin]]
name = "jobexecutor-cli"
path = "src/jobexecutor-cli.rs"

[dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
log = "0.4.14"
prost = "0.8"
structopt = "0.3.22"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync"]}
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
