[package]
edition = "2021"
name = "runkins"
version = "0.1.0"

[[bin]]
name = "runkins"
path = "src/runkins-cli.rs"

[dependencies]
anyhow = "1.0.42"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
prost = "0.8"
structopt = "0.3.22"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync"]}
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
