[package]
edition = "2018"
name = "jobexecutor"
version = "0.1.0"

[dependencies]
log = "0.4"
rand = "0.8"
thiserror = "1.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "fs"]}
tokio-stream = {version = "0.1", features = ["net", "sync"]}
tonic = {version = "0.5", optional = true}
pin-project-lite = "0.2"
futures = "0.3.17"

[dev-dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
envconfig = "0.10.0"
libc = "0.2.103"
