[package]
edition = "2021"
name = "runkins_lib"
version = "0.1.0"
description = "Runkins makes it easy to manage command execution."
homepage = "https://github.com/tomasol/runkins"
license = "MIT"
repository = "https://github.com/tomasol/runkins"

[dependencies]
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "fs"] }
tokio-stream = { version = "0.1.8", features = ["net", "sync"] }
tonic = { version = "0.6.1", optional = true }
pin-project-lite = "0.2.7"
futures = "0.3.17"

[dev-dependencies]
anyhow = "1.0.47"
env_logger = "0.9.0"
envconfig = "0.10.0"
libc = "0.2.107"
