[package]
edition = "2021"
name = "runkins_proto"
version = "0.1.0"
description = "Runkins makes it easy to manage command execution."
homepage = "https://github.com/tomasol/runkins"
license = "MIT"
repository = "https://github.com/tomasol/runkins"

[dependencies]
prost = "0.9.0"
tonic = "0.6.1"

[build-dependencies]
tonic-build = "0.6.0"
