[package]
edition = "2021"
name = "runkins"
version = "0.1.0"
description = "Runkins makes it easy to manage command execution."
homepage = "https://github.com/tomasol/runkins"
license = "MIT"
repository = "https://github.com/tomasol/runkins"

[features]
default = ["server", "cli"]
cli = ["dotenv", "structopt"]
server = ["runkins_lib","rand","tokio-stream","tracing-core","futures-core"]

[[bin]]
name = "runkins"
path = "src/runkins-cli.rs"
required-features = ["cli"]

[[bin]]
name = "runkins-server"
path = "src/runkins-server.rs"
required-features = ["server"]

[dependencies]
runkins_proto = { version = "0.1.0",path = "../proto" }
anyhow = "1.0.42"
env_logger = "0.9.0"
log = "0.4.14"
prost = "0.8"
tonic = "0.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "process"]}

# cli
dotenv = { version = "0.15.0", optional = true}
structopt = { version ="0.3.22", optional = true}
# server
runkins_lib = { version = "0.1.0", path = "../lib", features = ["tonic"], optional = true}
rand = { version = "0.8", optional = true}
tokio-stream = { version = "0.1", features = ["net"], optional = true}
tracing-core = { version = "0.1.20", optional = true}
futures-core = { version = "0.3", optional = true}

[dev-dependencies]
tempfile = "3"

