[package]
edition = "2021"
name = "runkins-server"
version = "0.1.0"

[[bin]]
name = "runkins-server"
path = "src/runkins-server.rs"

[dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
runkins-lib = {path = "../lib", features = ["tonic"]}
log = "0.4.14"
prost = "0.8"
rand = "0.8"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "process"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.5"
console-subscriber = { git = "https://github.com/tokio-rs/console" }
tracing-core = "0.1.20"
futures-core = "0.3"

[build-dependencies]
tonic-build = "0.5"
